--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css");
+/* @import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css"; */
 @import "tailwindcss";
 
 body{
     background-color: #000;
+    color:#fff
+}
+a{
     color:#fff
 }
 .container{
