--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @import "tailwindcss";
 
 body{
-    background-color: #000;
+    background-color: #0f0f0f;
     color:#fff
 }
 a{
@@ -15,3 +15,27 @@ a{
     padding:0 20px;
     margin: 0 auto;
 }
+
+
+/* Scrollbar width */
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+  
+  /* Scrollbar Track */
+  ::-webkit-scrollbar-track {
+    background: #1e1e1e; /* Dark background */
+    border-radius: 4px;
+  }
+  
+  /* Scrollbar Thumb */
+  ::-webkit-scrollbar-thumb {
+    background: #555;
+    border-radius: 4px;
+  }
+  
+  /* Hover effect */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #888;
+  }
